--- a/components/DeleteFileActionRendererComponent.html
+++ b/components/DeleteFileActionRendererComponent.html
@@ -707,7 +707,7 @@ import {Explorer} from &quot;../../../../../../../explorer&quot;;
 import {ToastData, ToastEvent} from &quot;../../../../../../../../global/vars&quot;;
 import {usePreloader} from &quot;../../../../../../../../modules/preloader/src/use-preloader&quot;;
 import {FormControl, FormGroup} from &quot;@angular/forms&quot;;
-import {File} from &quot;@k-platform/client&quot;;
+import {File} from &quot;../../../../../../../../modules/file&quot;;
 
 /**
  * This component provides functionality to confirm and delete a file.
